# euclidean_fast_attention

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
datasets/: 3D_cluster_16_atoms_radius_2point5.npz  3D_cluster_32_atoms_radius_5.npz  cumulene_profile.npz  sn2_F_I.npz  two_atoms.npz
euclidean_fast_attention/: __init__.py  fast_attention.py  model.py
euclidean_fast_attention/utils/: jraph_utils.py  npz_trainer.py  training_utils.py
examples/: Energy_profile_scans.ipynb  EuclideanFastAttention.ipynb  Minimal_training_example.ipynb  Models.ipynb  Training_evaluation_and_loading_pretrained.ipynb
pretrained/3d_cluster/3d_cluster_num_atoms=16_radius_2point5_num_iterations=2_batch_size=32_with_efa/ckpt_234000/metrics/: metrics
pretrained/3d_cluster/3d_cluster_num_atoms=16_radius_2point5_num_iterations=2_batch_size=32_with_efa/ckpt_234000/params/: manifest.ocdbt
pretrained/3d_cluster/3d_cluster_num_atoms=16_radius_2point5_num_iterations=2_batch_size=32_without_efa/ckpt_230000/metrics/: metrics
pretrained/3d_cluster/3d_cluster_num_atoms=16_radius_2point5_num_iterations=2_batch_size=32_without_efa/ckpt_230000/params/: _METADATA  manifest.ocdbt
pretrained/3d_cluster/3d_cluster_num_atoms=16_radius_2point5_num_iterations=3_batch_size=32_without_efa/ckpt_234000/metrics/: metrics
pretrained/cumulene/cumulene_with_efa_num_iterations=3_efa_max_degree=1_seed=0/: metrics.json
pretrained/cumulene/cumulene_without_efa_num_iterations=3_seed=0/: metrics.json
tests/: test_fast_attention.py  test_rope.py
(+49 files in other folders)
